--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "goit-node-rest-api",
-  "type": "module",
-  "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "joi": "^17.11.0",
-    "morgan": "^1.10.0",
-    "nanoid": "^5.1.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  }
+    "name": "goit-node-rest-api",
+    "type": "module",
+    "scripts": {
+        "start": "node ./app.js",
+        "dev": "nodemon ./app.js"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^4.18.2",
+        "joi": "^17.11.0",
+        "morgan": "^1.10.0",
+        "pg": "^8.13.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.37.5",
+        "sequelize-cli": "^6.6.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.2"
+    }
 }
